--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyC8YMPocSykHuNLw0GKtp4POl-84EgaRwQ",
+      authDomain: "rpgzaooo.firebaseapp.com",
+      projectId: "rpgzaooo",
+      storageBucket: "rpgzaooo.appspot.com",
+      messagingSenderId: "1035816551486",
+      appId: "1:1035816551486:web:fa76331acb33735354fd6f"
     };
 
     // Initialize Firebase
